<resources>
    <string name="app_name">HMS ABES</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="canteen">Canteen</string>
    <string name="allotment">Allotment</string>
    <string name="complains">Complains</string>
    <string name="leave">Leave</string>
    <string name="select">Select</string>
    <string name="select_department">Select Department</string>
    <string name="admission_no">Admission No.</string>
    <string name="enter_your_admission_number">Enter Your Admission Number…</string>
    <string name="enter_your_name">Enter Your Name…</string>
    <string name="name">Name</string>
    <string name="select_block">Select Block</string>
    <string name="room_no">Room No.</string>
    <string name="enter_your_room_no">Enter Your Room No…</string>
    <string name="date">Date</string>
    <string name="select_date_of_leave">Select Date of Leave</string>
    <string name="select_time_of_leave">Select Time of Leave</string>
    <string name="select_time_of_return">Select Time of Return</string>
    <string name="select_date_of_return">Select Date of Return</string>
    <string name="date_of_leave">Date of Leave</string>
    <string name="time_of_leave">Time of Leave</string>
    <string name="time_of_return">Time of Return</string>
    <string name="date_of_return">Date of Return</string>
    <string name="student_mobile_no">Student Mobile No.</string>
    <string name="student_mobile_number">Student Mobile Number</string>

    <string name="title_activity_main2">Leanback MainActivity2</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="problemrelatedto">Problem Related to</string>
    <string name="wifi_note">Note: Please Connect To ABESEC Wifi Network Before Pressing The Connect Button.</string>


    <!--  Submit Button Strings -->
    <string name="submit_leave_form">Submit Leave Form</string>
    <string name="submit_complaint">Submit Complaint</string>


    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="title_activity_main3">Leanback MainActivity3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wi_fi">Wi-fi</string>
    <string name="dashboard">Dashboard</string>
    <string name="ticket">Ticket</string>
    <string name="profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="describe_the_problem">Describe the problem…</string>
    <string name="auto_complete_text_view">Auto Complete Text View</string>
    <string name="describe_your_problem">Describe your problem...</string>
    <string name="log_in">LOG-IN</string>
    <string name="hms_abes">HMS-ABES</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="forgot_password_click_here">Forgot password? Click here.</string>
    <string name="don_t_have_an_account_click_on_regsiter_below">Don\'t have an account? Click on Regsiter below.</string>
    <string name="register">Register</string>
    <string name="sign_up">SIGN-UP</string>
    <string name="your_email_id">Your Email Id</string>
    <string name="block">Block</string>
    <string name="department">Department</string>
    <string name="admn_no">Admn. No.</string>
    <string name="retype_admn_no">Retype Admn. No.</string>
    <string name="parentMobileNo">Parent Mobile Number</string>
    <string name="account_already_exist_click_on_login_below">Account Already Exist? Click on Login below.</string>
    <string name="retype_password">Retype Password</string>
    <string name="abes_engineering">ABES Engineering</string>
    <string name="college">College</string>
    <string name="section">Section</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>