<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:title="@string/dashboard"
            android:icon="@drawable/ic_dashboard"/>

        <item
            android:id="@+id/drawer_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"/>

        <item
            android:id="@+id/drawer_share"
            android:title="@string/share"
            android:icon="@drawable/ic_share"/>

        <item
            android:id="@+id/drawer_rate"
            android:title="@string/rate_us"
            android:icon="@drawable/ic_rate_review"/>




    </group>

</menu>