<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SplashScreen">
    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="11dp"
        app:cardUseCompatPadding="true"
        android:layout_height="300dp"
        app:contentPaddingRight="@dimen/cardview_default_elevation"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <ImageView
                android:layout_width="100dp"
                android:id="@+id/imgabeslogo"
                android:layout_height="100dp"
                android:layout_marginBottom="40dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/abeslogo1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abes_engineering"
                android:textColor="#000000"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/college"
                android:textColor="#000000"
                android:textSize="20sp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>