<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#241124"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="wrap_content"
    tools:context=".LeaveFragment">
    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="12dp"
            app:cardElevation="12dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"

                    android:layout_gravity="right"
                    android:src="@drawable/abeslogo1" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:text="LEAVE SECTION"
                        android:textSize="30sp"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="10dp"
                        android:id="@+id/complainsheadingtxt"
                        />
                </LinearLayout>

                <!--            DATE Of Leave-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="14dp"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date_of_leave"
                        android:textColor="#0CA0F0"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/dateOfLeaveTxt"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:autofillHints="@string/select_date_of_leave"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:textColorHint="#000000"
                        android:drawableEnd="@drawable/ic_date"
                        android:focusable="false"
                        android:hint="@string/select_date_of_leave"
                        android:inputType="date"
                        android:textSize="16sp" />
                </LinearLayout>

                <!--           Time Of Leave-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="14dp"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:text="@string/time_of_leave"
                        android:textColor="#0CA0F0"
                        android:inputType="time"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/timeOfLeaveTxt"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:autofillHints="@string/select_time_of_leave"
                        android:clickable="false"
                        android:textColorHint="#000000"
                        android:cursorVisible="false"
                        android:drawableEnd="@drawable/ic_time"
                        android:focusable="false"
                        android:hint="@string/select_time_of_leave"
                        android:textSize="16sp" />
                </LinearLayout>


                <!--            DATE Of Return-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="14dp"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:text="@string/date_of_return"
                        android:textColor="#0CA0F0"
                        android:inputType="date"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/dateOfReturnTxt"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:autofillHints="@string/select_date_of_return"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:textColorHint="#000000"
                        android:drawableEnd="@drawable/ic_date"
                        android:focusable="false"
                        android:inputType="date"
                        android:hint="@string/select_date_of_return"
                        android:textSize="16sp" />
                </LinearLayout>

                <!--           Time Of Return-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="14dp"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/time_of_return"
                        android:textColor="#0CA0F0"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/timeOfReturnTxt"
                        android:textColorHint="#000000"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:autofillHints="@string/select_time_of_return"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:drawableEnd="@drawable/ic_time"
                        android:focusable="false"
                        android:hint="@string/select_time_of_return"
                        android:inputType="none"
                        android:textSize="16sp" />
                </LinearLayout>

                <!--            Student Mobile No -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="14dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/student_mobile_no"
                        android:textColor="#0CA0F0"
                        android:textSize="12sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:textColorHint="#000000"
                        android:autofillHints="@string/student_mobile_number"
                        android:drawableEnd="@drawable/ic_mobile"
                        android:hint="@string/student_mobile_number"
                        android:inputType="number"
                        android:textSize="16sp" />
                    <EditText
                        android:layout_marginTop="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:textColorHint="#000000"
                        android:autofillHints="CO Name"
                        android:hint="CO Name"
                        android:inputType="text"
                        android:textSize="16sp" />
                     <EditText
                         android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColorHint="#000000"
                    android:autofillHints="Relation Ship"
                    android:hint="Relation Ship"
                    android:inputType="text"
                    android:textSize="16sp" />
                </LinearLayout>

                <!--                Submit Button-->
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:id="@+id/leavefragmentbtn"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_bg"
                    android:paddingHorizontal="12dp"
                    android:text="@string/submit_leave_form" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </ScrollView>





</LinearLayout>