<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="741dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="325dp"
                android:background="@color/white"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="70dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/logo_removebg_preview" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/krona_one"
                    android:text="@string/hms_abes"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="80dp"
                    android:layout_height="4dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/gradient_bg" />

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="-60dp"
                android:layout_marginBottom="12dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="5dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="16dp"
                        android:fontFamily="@font/krona_one"
                        android:text="@string/log_in"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="15dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/otp_enter_3"
                            android:layout_width="30dp"
                            android:layout_height="46dp"
                            android:layout_marginStart="85dp"
                            android:gravity="center"
                            android:hint="*"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:maxLength="1"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            tools:ignore="LabelFor" />

                        <EditText
                            android:id="@+id/otp_enter_4"
                            android:layout_width="30dp"
                            android:layout_height="46dp"
                            android:layout_marginStart="20dp"
                            android:gravity="center"
                            android:hint="*"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:maxLength="1"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            tools:ignore="LabelFor" />

                        <EditText
                            android:id="@+id/otp_enter_5"
                            android:layout_width="30dp"
                            android:layout_height="46dp"
                            android:layout_marginStart="20dp"
                            android:gravity="center"
                            android:hint="*"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:maxLength="1"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            tools:ignore="LabelFor" />

                        <EditText
                            android:id="@+id/otp_enter_6"
                            android:layout_width="30dp"
                            android:layout_height="46dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="15dp"
                            android:gravity="center"
                            android:hint="*"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:maxLength="1"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            tools:ignore="LabelFor" />
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/forgotPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/forgot_password_click_here"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBarLogin"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toTopOf="@id/logInButton" />

            <Button
                android:id="@+id/logInButton"
                android:layout_width="155dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:backgroundTint="#85FF0000"
                android:text="@string/log_in"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/fingerprint_scan" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Use Fingerptint to login."
                android:textColor="@color/black"/>

        </LinearLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>